<resources>
    <!-- Screen titles -->
    <string name="app_name">SchedulesApp</string>
    <string name="schedules_manager_screen_title">All Schedules</string>
    <string name="new_schedule_creator_screen_title">New Schedule</string>
    <string name="main_screen_title">Schedule</string>

    <!-- Main menu items -->
    <string name="action_schedules_manager">Management</string>
    <string name="action_one_day_schedule">Detailed</string>
    <string name="action_whole_schedule">Whole</string>

    <!-- Schedule data output -->
    <string name="schedule_name_output">Name:</string>
    <string name="schedule_date_of_creation_output">Created at: %1$s</string>
    <string name="schedule_is_saturday_working_output">Saturday is working day</string>
    <string name="schedule_is_num_denom_system_output">Numerator/Denominator schedule</string>

    <!-- Schedule data input -->
    <string name="schedule_name_input">Schedule name:</string>
    <string name="schedule_name_input_hint">Name of the new schedule</string>
    <string name="schedule_is_saturday_working_input">Saturday is working day</string>
    <string name="schedule_is_num_denom_system_input">Numerator/Denominator schedule</string>

    <!-- Pair data input -->
    <string name="pair_time_input_hint">Time</string>
    <string name="pair_name_input_hint">Name</string>
    <string name="pair_teacher_input_hint">Teacher</string>
    <string-array name="pairs_types">
        <item>Not stated</item>
        <item>Lecture</item>
        <item>Practice</item>
        <item>Laboratory</item>
        <item>Sport</item>
    </string-array>
    <string name="pair_place_input_hint">Place</string>
    <string name="pair_additional_info_input_hint">Additional information</string>
    <string name="pair_output_no_pairs">No pairs at that day</string>

    <!-- Buttons -->
    <string name="create_button">Create</string>
    <string name="add_pair_button">Add one more pair</string>

    <!-- Days of the week -->
    <string-array name="days_of_the_week">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <!-- Weeks -->
    <string-array name="weeks_names">
        <item>Numerator</item>
        <item>Denominator</item>
    </string-array>

    <!-- Dialogs -->
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_ok">OK</string>
    <string name="schedule_swap_dialog_title">Swap schedule</string>
    <string name="schedule_swap_dialog_message">
        The current schedule will be replaced by the selected one. Confirm action?
    </string>
    <string name="schedule_delete_dialog_title">Delete schedule</string>
    <string name="schedule_delete_dialog_message">
        The selected schedule will be deleted. Confirm action?
    </string>
    <string name="schedule_exists_dialog_title">Error</string>
    <string name="schedule_exists_dialog_message">
        The schedule with the same name is already exists.
    </string>
    <string name="max_pairs_count_reached_dialog_title">Warning</string>
    <string name="max_pairs_count_reached_message">
        Max count of pairs reached.
    </string>

</resources>
