<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorNotStated"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_main"
    android:theme="@style/PairDataInputFieldTheme">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pair_time_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pair_place_input_layout"
        app:layout_constraintEnd_toStartOf="@id/pair_name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pair_time_input"
            style="@style/PairDataInputFieldStyle"
            android:focusable="false"
            android:hint="@string/pair_time_input_hint"
            android:inputType="time"
            android:maxLength="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pair_place_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pair_additional_info_input_layout"
        app:layout_constraintEnd_toStartOf="@id/pair_teacher_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pair_time_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pair_place_input"
            style="@style/PairDataInputFieldStyle"
            android:hint="@string/pair_place_input_hint"
            android:inputType="textShortMessage|textMultiLine|textCapSentences"
            android:maxLength="10"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pair_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pair_teacher_input_layout"
        app:layout_constraintEnd_toStartOf="@+id/pair_type_input_spinner"
        app:layout_constraintStart_toEndOf="@id/pair_time_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pair_name_input"
            style="@style/PairDataInputFieldStyle"
            android:hint="@string/pair_name_input_hint"
            android:inputType="textShortMessage|textAutoCorrect|textMultiLine|textCapSentences"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pair_teacher_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pair_additional_info_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pair_place_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/pair_name_input_layout"
        app:layout_constraintWidth_percent=".8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pair_teacher_input"
            style="@style/PairDataInputFieldStyle"
            android:hint="@string/pair_teacher_input_hint"
            android:inputType="textMultiLine|textPersonName|textCapWords"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/pair_type_input_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="@color/colorPrimaryInversed"
        android:entries="@array/pairs_types"
        app:layout_constraintBottom_toTopOf="@+id/pair_additional_info_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pair_name_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        app:layout_constraintWidth_percent=".3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pair_additional_info_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pair_place_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pair_additional_info_input"
            style="@style/PairDataInputFieldStyle"
            android:hint="@string/pair_additional_info_input_hint"
            android:inputType="textLongMessage|textMultiLine|textCapSentences"
            android:maxLength="500" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
